--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,19 @@ dependencies:
   fluttertoast: ^8.2.2
   shared_preferences: ^2.2.1
   email_validator: ^2.1.17
-  image_picker: ^1.0.4
   intl: ^0.18.1
+  drift: ^2.11.1
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.8.3
+  provider: ^6.0.5
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  drift_dev: ^2.11.1
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
